--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,7 @@
   align-items: center;
   justify-content: center;
   background-color: #222;
-  height: 20px;
-  padding: 20px;
+  height: 8vh;
   color: white;
 }
 
