--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-header {
@@ -7,7 +10,7 @@
   align-items: center;
   justify-content: center;
   background-color: #222;
-  height: 8vh;
+  height: 60px;
   color: white;
 }
 
@@ -15,6 +18,10 @@
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+.App-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  flex: 1;
 }
