--- a/src/Cards/Card.css
+++ b/src/Cards/Card.css
@@ -1,7 +1,7 @@
 .Card {
   display: block;
   flex: 1 0 38%; /*Iig zorgen dat het minder dan gewenste percentage is*/
-  margin: 10px;
+  margin: 0 10px;
   background: white;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
@@ -9,11 +9,15 @@
 
 .Card__image {
   width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .Card__container {
   background: white;
   padding: 10px 20px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .Card__title {
