--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,15 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 
 .App-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #222;
+  position: fixed;
+  width: 100%;
   height: 60px;
+  background-color: #222;
   color: white;
+  z-index: 1;
 }
 
 .App-title {
