--- a/src/Cards/Card.css
+++ b/src/Cards/Card.css
@@ -1,33 +1,52 @@
 .Card {
   display: block;
-  flex: 1 0 38%; /*Iig zorgen dat het minder dan gewenste percentage is*/
-  margin: 0 10px;
-  background: white;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-}
-
-.Card__image {
+  position: relative;
+  height: 100vh;
   width: 100%;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .Card__container {
-  background: white;
-  padding: 10px 20px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: rgba(2,2,2,0.5);
 
-.Card__title {
-  font-family: 'Lato';
-  font-size: 38px;
-  font-weight: bold;
+  text-align: left;
+  color: white;
 }
 
 .Card__content {
+  padding: 20px;
+}
+.Card__content--title {
+  font-family: 'Lato';
+  font-size: 32px;
+  font-weight: bold;
+}
+.Card__content--description {
   font-family: 'Merriweather';
-  font-size: 24px;
+  font-size: 22px;
   line-height: 1.3;
+}
+
+.Card__date {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background: #222222;
+  color: white;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.Card__date h1, .Card__date h2 {
+  padding: 0 20px;
+}
+.Card__date--divider {
+  margin: 0 10px;
+  font-size: 32px;
 }
