--- a/src/Cards/Card.css
+++ b/src/Cards/Card.css
@@ -12,23 +12,24 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  background: rgba(2,2,2,0.5);
+  height: 220px;
+  background: rgba(2,2,2,0.6);
 
   text-align: left;
   color: white;
 }
 
 .Card__content {
-  padding: 20px;
+  padding: 10px 30px 0;
 }
 .Card__content--title {
   font-family: 'Lato';
-  font-size: 32px;
+  font-size: 36px;
   font-weight: bold;
 }
 .Card__content--description {
   font-family: 'Merriweather';
-  font-size: 22px;
+  font-size: 24px;
   line-height: 1.3;
 }
 
@@ -44,9 +45,13 @@
   justify-content: space-between;
 }
 .Card__date h1, .Card__date h2 {
-  padding: 0 20px;
+  padding: 0 30px;
 }
 .Card__date--divider {
   margin: 0 10px;
   font-size: 32px;
+}
+
+.Card__animateIn {
+  opacity: 1;
 }
