--- a/src/Cards/Card.css
+++ b/src/Cards/Card.css
@@ -6,6 +6,8 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  transition: opacity 1s ease-in-out;
 }
 
 .Card__container {
@@ -13,7 +15,7 @@
   bottom: 0;
   width: 100%;
   height: 220px;
-  background: rgba(2,2,2,0.6);
+  background: rgba(2,2,2,0.65);
 
   text-align: left;
   color: white;
@@ -31,27 +33,4 @@
   font-family: 'Merriweather';
   font-size: 24px;
   line-height: 1.3;
-}
-
-.Card__date {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  background: #222222;
-  color: white;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.Card__date h1, .Card__date h2 {
-  padding: 0 30px;
-}
-.Card__date--divider {
-  margin: 0 10px;
-  font-size: 32px;
-}
-
-.Card__animateIn {
-  opacity: 1;
 }
