--- a/src/Cards/CardsOverview.css
+++ b/src/Cards/CardsOverview.css
@@ -1,3 +1,19 @@
 .CardsOverview {
-  background-color: #f2f2f2;
+  background-color: #222;
+}
+
+.CardsOverview__header {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  width: 100%;
+  background: rgba(2,2,2,0.9);
+  color: white;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.CardsOverview__header h1, .CardsOverview__header h2 {
+  padding: 0 30px;
 }
