--- a/src/Cards/Card.css
+++ b/src/Cards/Card.css
@@ -14,7 +14,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 220px;
+  height: 280px;
   background: rgba(2,2,2,0.65);
 
   text-align: left;
@@ -22,15 +22,18 @@
 }
 
 .Card__content {
-  padding: 10px 30px 0;
+  padding: 30px 30px 0;
 }
 .Card__content--title {
   font-family: 'Lato';
-  font-size: 36px;
+  font-size: 42px;
   font-weight: bold;
+  margin: 0;
 }
 .Card__content--description {
   font-family: 'Merriweather';
-  font-size: 24px;
+  font-size: 32px;
   line-height: 1.3;
+  margin: 0;
+  margin-top: 20px;
 }
